# simpleauth

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  auth.toml  entrypoint.sh
nginx/: auth.conf
src/: main.rs
src/app/: config.rs  mod.rs
templates/: index.hbs  login.hbs  login.html.hbs  logout.hbs  logout.html.hbs
