[package]
name = "simpleauth"
version = "0.1.0"
authors = ["BluSyn <blusyn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
structopt = "0.3"

[dependencies.rocket]
version = "0.4.6"
default-features = true
features = ["private-cookies"]

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates"]
